kube/kuard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: httpd
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
